--- a/superbirdjumper3/index.html
+++ b/superbirdjumper3/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Superbirdjumper3</title>
-    <script src="vue.js"></script>
-    <script src="phaser.js"></script>
-    <script src="tailwind.js"></script>
+    <script src="../lib/vue.js"></script>
+    <script src="../lib/phaser.js"></script>
+    <script src="../lib/tailwind.js"></script>
     <style>
         body { margin: 0; background: #000; overflow: hidden; touch-action: none; }
         .menu-card { background: rgba(0,0,0,0.9); backdrop-filter: blur(20px); border: 1px solid rgba(255,255,255,0.15); }
