--- a/morris/index.html
+++ b/morris/index.html
@@ -6,7 +6,7 @@
     <script src="../lib/vue.js"></script>
     <script src="../lib/tailwind.js"></script>
     <style>
-        body { background-color: #0f172a; color: #f8fafc; overflow: hidden; }
+        body { background-color: #020617; color: #f8fafc; overflow: hidden; }
         .game-grid {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
@@ -16,10 +16,15 @@
             max-width: 500px;
             position: relative;
         }
-        .piece-shadow { box-shadow: 0 4px 0 rgba(0,0,0,0.4); }
-        .slot-hover:hover { background-color: rgba(255, 255, 255, 0.15); }
+        /* Extra depth for the dark theme */
+        .piece-shadow { box-shadow: 0 6px 0 rgba(0,0,0,0.6); }
+        .slot-hover:hover { background-color: rgba(255, 255, 255, 0.05); }
         .fade-enter-active, .fade-leave-active { transition: opacity 0.5s; }
         .fade-enter-from, .fade-leave-to { opacity: 0; }
+
+        /* Neon Glows */
+        .p1-glow { box-shadow: 0 0 15px rgba(244, 63, 94, 0.4); }
+        .p2-glow { box-shadow: 0 0 15px rgba(6, 182, 212, 0.4); }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
@@ -27,50 +32,50 @@
     <div id="app" class="w-full max-w-5xl flex flex-col md:flex-row gap-12 items-center justify-center relative">
 
         <transition name="fade">
-            <div v-if="winner" class="absolute inset-0 z-50 flex items-center justify-center bg-slate-950/90 backdrop-blur-sm rounded-3xl">
-                <div class="text-center p-10 border-2 rounded-2xl shadow-2xl" :class="winner === 1 ? 'border-rose-500' : 'border-cyan-500'">
+            <div v-if="winner" class="absolute inset-0 z-50 flex items-center justify-center bg-black/95 backdrop-blur-md rounded-3xl">
+                <div class="text-center p-10 border-2 rounded-2xl shadow-2xl bg-slate-950" :class="winner === 1 ? 'border-rose-500' : 'border-cyan-500'">
                     <h2 class="text-6xl font-black mb-4 italic" :class="winner === 1 ? 'text-rose-500' : 'text-cyan-500'">
                         PLAYER {{ winner }} WINS!
                     </h2>
-                    <p class="text-slate-400 mb-8">Victory is yours. The opponent has been cleared.</p>
-                    <button @click="resetGame" class="px-8 py-3 bg-white text-slate-900 font-bold rounded-full hover:bg-slate-200 transition-colors uppercase tracking-widest">
-                        Rematch
+                    <p class="text-slate-400 mb-8 tracking-wide">The board has been conquered.</p>
+                    <button @click="resetGame" class="px-10 py-4 bg-white text-black font-black rounded-full hover:bg-slate-200 transition-all uppercase tracking-widest">
+                        New Game
                     </button>
                 </div>
             </div>
         </transition>
 
         <div class="flex flex-col items-center w-32 order-2 md:order-1">
-            <div :class="['p-4 rounded-xl mb-4 transition-all border-2 w-full text-center', turn === 1 && !winner ? 'border-rose-500 bg-rose-500/10 shadow-[0_0_15px_rgba(244,63,94,0.3)]' : 'border-slate-800 opacity-50']">
-                <p class="font-bold text-rose-500">Player 1</p>
-                <p class="text-[10px] uppercase tracking-tighter opacity-70">{{ p1Stock }} Left</p>
+            <div :class="['p-4 rounded-xl mb-4 transition-all border-2 w-full text-center', turn === 1 && !winner ? 'border-rose-500 bg-rose-500/10 p1-glow' : 'border-slate-900 opacity-30']">
+                <p class="font-bold text-rose-500 uppercase text-xs tracking-widest">Player 1</p>
+                <p class="text-2xl font-black text-white leading-none mt-1">{{ p1Stock }}</p>
             </div>
-            <div class="grid grid-cols-2 gap-2 bg-slate-900/80 p-3 rounded-lg border border-slate-700">
-                <div v-for="n in (9 - p1Stock - p1OnBoard)" class="w-8 h-8 rounded-full bg-rose-950 border border-rose-500/20 flex items-center justify-center">
-                    <div class="w-2 h-2 bg-rose-500/20 rounded-full"></div>
+            <div class="grid grid-cols-2 gap-2 bg-black/40 p-3 rounded-lg border border-slate-800">
+                <div v-for="n in (9 - p1Stock - p1OnBoard)" class="w-8 h-8 rounded-full bg-rose-950/30 border border-rose-900/50 flex items-center justify-center">
+                    <div class="w-2 h-2 bg-rose-500/10 rounded-full"></div>
                 </div>
             </div>
-            <p class="text-[10px] mt-2 uppercase tracking-widest text-slate-500 font-bold">Lost</p>
+            <p class="text-[10px] mt-2 uppercase tracking-[0.2em] text-slate-600 font-bold">Captured</p>
         </div>
 
         <div class="flex flex-col items-center order-1 md:order-2">
             <div class="mb-8 text-center">
-                <h1 class="text-5xl font-black tracking-tighter text-white mb-3 italic">MORRIS</h1>
-                <div :class="['px-8 py-2 rounded-full font-bold transition-all duration-300 shadow-xl border',
-                             phase === 'removing' ? 'bg-amber-400 text-black border-amber-200 animate-pulse' : 'bg-slate-800 text-slate-300 border-slate-700']">
+                <h1 class="text-6xl font-black tracking-tighter text-white mb-3 italic">MORRIS</h1>
+                <div :class="['px-10 py-2 rounded-full font-bold transition-all duration-300 shadow-2xl border uppercase text-sm tracking-widest',
+                             phase === 'removing' ? 'bg-amber-400 text-black border-amber-200 animate-pulse' : 'bg-slate-900/50 text-slate-400 border-slate-800']">
                     {{ statusMessage }}
                 </div>
             </div>
 
-            <div class="game-grid bg-slate-900 p-8 rounded-3xl border border-slate-700 shadow-[0_0_50px_rgba(0,0,0,0.5)]">
+            <div class="game-grid bg-slate-950 p-8 rounded-3xl border border-slate-800 shadow-[0_0_80px_rgba(0,0,0,0.8)]">
                 <svg class="absolute inset-0 w-full h-full p-8 pointer-events-none" viewBox="0 0 100 100">
-                    <rect x="5" y="5" width="90" height="90" fill="none" stroke="#334155" stroke-width="1.2"/>
-                    <rect x="20" y="20" width="60" height="60" fill="none" stroke="#334155" stroke-width="1.2"/>
-                    <rect x="35" y="35" width="30" height="30" fill="none" stroke="#334155" stroke-width="1.2"/>
-                    <line x1="50" y1="5" x2="50" y2="35" stroke="#334155" stroke-width="1.2"/>
-                    <line x1="50" y1="65" x2="50" y2="95" stroke="#334155" stroke-width="1.2"/>
-                    <line x1="5" y1="50" x2="35" y2="50" stroke="#334155" stroke-width="1.2"/>
-                    <line x1="65" y1="50" x2="95" y2="50" stroke="#334155" stroke-width="1.2"/>
+                    <rect x="5" y="5" width="90" height="90" fill="none" stroke="#1e293b" stroke-width="1.5"/>
+                    <rect x="20" y="20" width="60" height="60" fill="none" stroke="#1e293b" stroke-width="1.5"/>
+                    <rect x="35" y="35" width="30" height="30" fill="none" stroke="#1e293b" stroke-width="1.5"/>
+                    <line x1="50" y1="5" x2="50" y2="35" stroke="#1e293b" stroke-width="1.5"/>
+                    <line x1="50" y1="65" x2="50" y2="95" stroke="#1e293b" stroke-width="1.5"/>
+                    <line x1="5" y1="50" x2="35" y2="50" stroke="#1e293b" stroke-width="1.5"/>
+                    <line x1="65" y1="50" x2="95" y2="50" stroke="#1e293b" stroke-width="1.5"/>
                 </svg>
 
                 <div v-for="(pos, idx) in points" :key="idx"
@@ -79,33 +84,42 @@
 
                     <div @click="handleClick(idx)"
                          :class="[
-                            'w-11 h-11 rounded-full cursor-pointer z-10 transition-all duration-300 flex items-center justify-center border-2',
-                            board[idx] === 1 ? 'bg-rose-500 border-rose-300 piece-shadow' : '',
-                            board[idx] === 2 ? 'bg-cyan-500 border-cyan-300 piece-shadow' : '',
-                            !board[idx] ? 'bg-slate-800 border-slate-700 slot-hover scale-50 hover:scale-90' : '',
-                            selectedPoint === idx ? 'ring-4 ring-white scale-110 z-20 shadow-[0_0_20px_white]' : ''
+                            'w-12 h-12 rounded-full cursor-pointer z-10 transition-all duration-300 flex items-center justify-center border-2',
+                            board[idx] === 1 ? 'bg-rose-600 border-rose-400 piece-shadow p1-glow' : '',
+                            board[idx] === 2 ? 'bg-cyan-600 border-cyan-400 piece-shadow p2-glow' : '',
+                            !board[idx] ? 'bg-slate-900/50 border-slate-800 slot-hover scale-50 hover:scale-75' : '',
+                            selectedPoint === idx ? 'ring-4 ring-white scale-110 z-20 shadow-[0_0_25px_white]' : ''
                          ]">
-                         <div v-if="board[idx]" class="w-7 h-7 rounded-full border border-white/30"></div>
+                         <div v-if="board[idx]" class="w-8 h-8 rounded-full border border-white/20"></div>
                     </div>
                 </div>
             </div>
 
-            <button @click="resetGame" class="mt-8 text-slate-500 hover:text-white transition-colors text-xs uppercase tracking-widest font-bold">
-                Reset Current Game
+            <button @click="resetGame" class="mt-8 text-slate-700 hover:text-rose-500 transition-colors text-[10px] uppercase tracking-[0.3em] font-black">
+                Restart Session
             </button>
+
+            <footer class="mt-10 text-center border-t border-slate-900 pt-6 w-full opacity-60">
+                <p class="text-slate-500 font-bold text-xs uppercase tracking-widest">Luca's Website</p>
+                <a href="https://sites.google.com/view/codyferd"
+                   target="_blank"
+                   class="text-[10px] text-slate-600 hover:text-cyan-500 transition-colors duration-300 underline underline-offset-4 mt-1 inline-block">
+                   sites.google.com/view/codyferd
+                </a>
+            </footer>
         </div>
 
         <div class="flex flex-col items-center w-32 order-3">
-            <div :class="['p-4 rounded-xl mb-4 transition-all border-2 w-full text-center', turn === 2 && !winner ? 'border-cyan-500 bg-cyan-500/10 shadow-[0_0_15px_rgba(6,182,212,0.3)]' : 'border-slate-800 opacity-50']">
-                <p class="font-bold text-cyan-500">Player 2</p>
-                <p class="text-[10px] uppercase tracking-tighter opacity-70">{{ p2Stock }} Left</p>
+            <div :class="['p-4 rounded-xl mb-4 transition-all border-2 w-full text-center', turn === 2 && !winner ? 'border-cyan-500 bg-cyan-500/10 p2-glow' : 'border-slate-900 opacity-30']">
+                <p class="font-bold text-cyan-500 uppercase text-xs tracking-widest">Player 2</p>
+                <p class="text-2xl font-black text-white leading-none mt-1">{{ p2Stock }}</p>
             </div>
-            <div class="grid grid-cols-2 gap-2 bg-slate-900/80 p-3 rounded-lg border border-slate-700">
-                <div v-for="n in (9 - p2Stock - p2OnBoard)" class="w-8 h-8 rounded-full bg-cyan-950 border border-cyan-500/20 flex items-center justify-center">
-                    <div class="w-2 h-2 bg-cyan-500/20 rounded-full"></div>
+            <div class="grid grid-cols-2 gap-2 bg-black/40 p-3 rounded-lg border border-slate-800">
+                <div v-for="n in (9 - p2Stock - p2OnBoard)" class="w-8 h-8 rounded-full bg-cyan-950/30 border border-cyan-900/50 flex items-center justify-center">
+                    <div class="w-2 h-2 bg-cyan-500/10 rounded-full"></div>
                 </div>
             </div>
-            <p class="text-[10px] mt-2 uppercase tracking-widest text-slate-500 font-bold">Lost</p>
+            <p class="text-[10px] mt-2 uppercase tracking-[0.2em] text-slate-600 font-bold">Captured</p>
         </div>
     </div>
 
@@ -143,10 +157,9 @@
                 const winner = ref(null);
 
                 const statusMessage = computed(() => {
-                    if (winner.value) return "GAME OVER";
-                    if (phase.value === 'removing') return "MILL FORMED! DESTROY A PIECE";
-                    const p = turn.value === 1 ? 'PLAYER 1' : 'PLAYER 2';
-                    return `${p}: ${phase.value.toUpperCase()}`;
+                    if (winner.value) return "VICTORY";
+                    if (phase.value === 'removing') return "MILL FORMED: REMOVE PIECE";
+                    return phase.value;
                 });
 
                 const isPartOfMill = (id, owner) => {
