--- a/morris/index.html
+++ b/morris/index.html
@@ -6,7 +6,7 @@
     <script src="../lib/vue.js"></script>
     <script src="../lib/tailwind.js"></script>
     <style>
-        body { background-color: #020617; color: #f8fafc; overflow: hidden; }
+        body { background-color: #000000; color: #f8fafc; overflow: hidden; }
         .game-grid {
             display: grid;
             grid-template-columns: repeat(7, 1fr);
@@ -16,15 +16,13 @@
             max-width: 500px;
             position: relative;
         }
-        /* Extra depth for the dark theme */
-        .piece-shadow { box-shadow: 0 6px 0 rgba(0,0,0,0.6); }
-        .slot-hover:hover { background-color: rgba(255, 255, 255, 0.05); }
-        .fade-enter-active, .fade-leave-active { transition: opacity 0.5s; }
+        .piece-shadow { box-shadow: 0 0 20px rgba(0,0,0,1); }
+        .slot-hover:hover { background-color: rgba(255, 255, 255, 0.08); }
+        .fade-enter-active, .fade-leave-active { transition: opacity 0.6s ease; }
         .fade-enter-from, .fade-leave-to { opacity: 0; }
 
-        /* Neon Glows */
-        .p1-glow { box-shadow: 0 0 15px rgba(244, 63, 94, 0.4); }
-        .p2-glow { box-shadow: 0 0 15px rgba(6, 182, 212, 0.4); }
+        .p1-glow { box-shadow: 0 0 20px rgba(244, 63, 94, 0.5), inset 0 0 10px rgba(255,255,255,0.2); }
+        .p2-glow { box-shadow: 0 0 20px rgba(6, 182, 212, 0.5), inset 0 0 10px rgba(255,255,255,0.2); }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
@@ -32,50 +30,50 @@
     <div id="app" class="w-full max-w-5xl flex flex-col md:flex-row gap-12 items-center justify-center relative">
 
         <transition name="fade">
-            <div v-if="winner" class="absolute inset-0 z-50 flex items-center justify-center bg-black/95 backdrop-blur-md rounded-3xl">
-                <div class="text-center p-10 border-2 rounded-2xl shadow-2xl bg-slate-950" :class="winner === 1 ? 'border-rose-500' : 'border-cyan-500'">
-                    <h2 class="text-6xl font-black mb-4 italic" :class="winner === 1 ? 'text-rose-500' : 'text-cyan-500'">
-                        PLAYER {{ winner }} WINS!
+            <div v-if="winner" class="absolute inset-0 z-50 flex flex-col items-center justify-center bg-black/95 backdrop-blur-xl rounded-3xl">
+                <div class="text-center p-12 border border-white/10 rounded-3xl bg-neutral-900/50 shadow-2xl">
+                    <h2 class="text-7xl font-black mb-2 italic tracking-tighter" :class="winner === 1 ? 'text-rose-500' : 'text-cyan-500'">
+                        PLAYER {{ winner }}
                     </h2>
-                    <p class="text-slate-400 mb-8 tracking-wide">The board has been conquered.</p>
-                    <button @click="resetGame" class="px-10 py-4 bg-white text-black font-black rounded-full hover:bg-slate-200 transition-all uppercase tracking-widest">
-                        New Game
+                    <p class="text-2xl font-light tracking-[0.3em] text-white mb-10 uppercase">Conqueror</p>
+                    <button @click="resetGame" class="px-12 py-4 bg-white text-black font-black rounded-full hover:scale-105 active:scale-95 transition-all uppercase tracking-widest">
+                        Reignite
                     </button>
                 </div>
             </div>
         </transition>
 
         <div class="flex flex-col items-center w-32 order-2 md:order-1">
-            <div :class="['p-4 rounded-xl mb-4 transition-all border-2 w-full text-center', turn === 1 && !winner ? 'border-rose-500 bg-rose-500/10 p1-glow' : 'border-slate-900 opacity-30']">
-                <p class="font-bold text-rose-500 uppercase text-xs tracking-widest">Player 1</p>
-                <p class="text-2xl font-black text-white leading-none mt-1">{{ p1Stock }}</p>
+            <div :class="['p-5 rounded-2xl mb-6 transition-all border w-full text-center', turn === 1 && !winner ? 'border-rose-500/50 bg-rose-500/5 p1-glow' : 'border-white/5 opacity-20']">
+                <p class="font-bold text-rose-500 uppercase text-[10px] tracking-[0.2em]">P1 Hand</p>
+                <p class="text-3xl font-black text-white mt-1">{{ p1Stock }}</p>
             </div>
-            <div class="grid grid-cols-2 gap-2 bg-black/40 p-3 rounded-lg border border-slate-800">
-                <div v-for="n in (9 - p1Stock - p1OnBoard)" class="w-8 h-8 rounded-full bg-rose-950/30 border border-rose-900/50 flex items-center justify-center">
-                    <div class="w-2 h-2 bg-rose-500/10 rounded-full"></div>
+            <div class="grid grid-cols-2 gap-3 bg-white/5 p-4 rounded-xl border border-white/10">
+                <div v-for="n in (9 - p1Stock - p1OnBoard)" class="w-8 h-8 rounded-full bg-rose-950/20 border border-rose-500/10 flex items-center justify-center">
+                    <div class="w-1.5 h-1.5 bg-rose-500/20 rounded-full"></div>
                 </div>
             </div>
-            <p class="text-[10px] mt-2 uppercase tracking-[0.2em] text-slate-600 font-bold">Captured</p>
+            <p class="text-[9px] mt-3 uppercase tracking-[0.4em] text-neutral-600 font-black">Losses</p>
         </div>
 
         <div class="flex flex-col items-center order-1 md:order-2">
-            <div class="mb-8 text-center">
-                <h1 class="text-6xl font-black tracking-tighter text-white mb-3 italic">MORRIS</h1>
-                <div :class="['px-10 py-2 rounded-full font-bold transition-all duration-300 shadow-2xl border uppercase text-sm tracking-widest',
-                             phase === 'removing' ? 'bg-amber-400 text-black border-amber-200 animate-pulse' : 'bg-slate-900/50 text-slate-400 border-slate-800']">
+            <div class="mb-10 text-center">
+                <h1 class="text-7xl font-black tracking-[calc(-0.05em)] text-white mb-4 italic">MORRIS</h1>
+                <div :class="['px-12 py-2.5 rounded-full font-black transition-all duration-500 border uppercase text-[11px] tracking-[0.25em]',
+                             phase === 'removing' ? 'bg-amber-400 text-black border-white animate-pulse' : 'bg-white/5 text-neutral-400 border-white/10']">
                     {{ statusMessage }}
                 </div>
             </div>
 
-            <div class="game-grid bg-slate-950 p-8 rounded-3xl border border-slate-800 shadow-[0_0_80px_rgba(0,0,0,0.8)]">
-                <svg class="absolute inset-0 w-full h-full p-8 pointer-events-none" viewBox="0 0 100 100">
-                    <rect x="5" y="5" width="90" height="90" fill="none" stroke="#1e293b" stroke-width="1.5"/>
-                    <rect x="20" y="20" width="60" height="60" fill="none" stroke="#1e293b" stroke-width="1.5"/>
-                    <rect x="35" y="35" width="30" height="30" fill="none" stroke="#1e293b" stroke-width="1.5"/>
-                    <line x1="50" y1="5" x2="50" y2="35" stroke="#1e293b" stroke-width="1.5"/>
-                    <line x1="50" y1="65" x2="50" y2="95" stroke="#1e293b" stroke-width="1.5"/>
-                    <line x1="5" y1="50" x2="35" y2="50" stroke="#1e293b" stroke-width="1.5"/>
-                    <line x1="65" y1="50" x2="95" y2="50" stroke="#1e293b" stroke-width="1.5"/>
+            <div class="game-grid bg-neutral-950 p-10 rounded-[2.5rem] border border-white/10 shadow-[0_0_100px_rgba(0,0,0,1)]">
+                <svg class="absolute inset-0 w-full h-full p-10 pointer-events-none opacity-40" viewBox="0 0 100 100">
+                    <rect x="5" y="5" width="90" height="90" fill="none" stroke="white" stroke-width="0.8"/>
+                    <rect x="20" y="20" width="60" height="60" fill="none" stroke="white" stroke-width="0.8"/>
+                    <rect x="35" y="35" width="30" height="30" fill="none" stroke="white" stroke-width="0.8"/>
+                    <line x1="50" y1="5" x2="50" y2="35" stroke="white" stroke-width="0.8"/>
+                    <line x1="50" y1="65" x2="50" y2="95" stroke="white" stroke-width="0.8"/>
+                    <line x1="5" y1="50" x2="35" y2="50" stroke="white" stroke-width="0.8"/>
+                    <line x1="65" y1="50" x2="95" y2="50" stroke="white" stroke-width="0.8"/>
                 </svg>
 
                 <div v-for="(pos, idx) in points" :key="idx"
@@ -84,42 +82,42 @@
 
                     <div @click="handleClick(idx)"
                          :class="[
-                            'w-12 h-12 rounded-full cursor-pointer z-10 transition-all duration-300 flex items-center justify-center border-2',
-                            board[idx] === 1 ? 'bg-rose-600 border-rose-400 piece-shadow p1-glow' : '',
-                            board[idx] === 2 ? 'bg-cyan-600 border-cyan-400 piece-shadow p2-glow' : '',
-                            !board[idx] ? 'bg-slate-900/50 border-slate-800 slot-hover scale-50 hover:scale-75' : '',
-                            selectedPoint === idx ? 'ring-4 ring-white scale-110 z-20 shadow-[0_0_25px_white]' : ''
+                            'w-12 h-12 rounded-full cursor-pointer z-10 transition-all duration-300 flex items-center justify-center border',
+                            board[idx] === 1 ? 'bg-rose-600 border-rose-300 p1-glow scale-100' : '',
+                            board[idx] === 2 ? 'bg-cyan-600 border-cyan-300 p2-glow scale-100' : '',
+                            !board[idx] ? 'bg-neutral-900 border-white/5 slot-hover scale-[0.4] hover:scale-100 hover:border-white/20' : '',
+                            selectedPoint === idx ? 'ring-[6px] ring-white scale-110 z-20 shadow-[0_0_40px_white]' : ''
                          ]">
-                         <div v-if="board[idx]" class="w-8 h-8 rounded-full border border-white/20"></div>
+                         <div v-if="board[idx]" class="w-7 h-7 rounded-full border border-white/30 bg-gradient-to-br from-white/20 to-transparent"></div>
                     </div>
                 </div>
             </div>
 
-            <button @click="resetGame" class="mt-8 text-slate-700 hover:text-rose-500 transition-colors text-[10px] uppercase tracking-[0.3em] font-black">
-                Restart Session
+            <button @click="resetGame" class="mt-10 text-neutral-700 hover:text-white transition-colors text-[9px] uppercase tracking-[0.5em] font-black">
+                Reset Board
             </button>
 
-            <footer class="mt-10 text-center border-t border-slate-900 pt-6 w-full opacity-60">
-                <p class="text-slate-500 font-bold text-xs uppercase tracking-widest">Luca's Website</p>
+            <footer class="mt-12 text-center border-t border-white/5 pt-8 w-full">
+                <p class="text-neutral-500 font-black text-[11px] uppercase tracking-[0.3em]">Luca's Website</p>
                 <a href="https://sites.google.com/view/codyferd"
                    target="_blank"
-                   class="text-[10px] text-slate-600 hover:text-cyan-500 transition-colors duration-300 underline underline-offset-4 mt-1 inline-block">
+                   class="text-[10px] text-neutral-600 hover:text-cyan-400 transition-all duration-300 underline underline-offset-8 mt-3 inline-block">
                    sites.google.com/view/codyferd
                 </a>
             </footer>
         </div>
 
         <div class="flex flex-col items-center w-32 order-3">
-            <div :class="['p-4 rounded-xl mb-4 transition-all border-2 w-full text-center', turn === 2 && !winner ? 'border-cyan-500 bg-cyan-500/10 p2-glow' : 'border-slate-900 opacity-30']">
-                <p class="font-bold text-cyan-500 uppercase text-xs tracking-widest">Player 2</p>
-                <p class="text-2xl font-black text-white leading-none mt-1">{{ p2Stock }}</p>
+            <div :class="['p-5 rounded-2xl mb-6 transition-all border w-full text-center', turn === 2 && !winner ? 'border-cyan-500/50 bg-cyan-500/5 p2-glow' : 'border-white/5 opacity-20']">
+                <p class="font-bold text-cyan-500 uppercase text-[10px] tracking-[0.2em]">P2 Hand</p>
+                <p class="text-3xl font-black text-white mt-1">{{ p2Stock }}</p>
             </div>
-            <div class="grid grid-cols-2 gap-2 bg-black/40 p-3 rounded-lg border border-slate-800">
-                <div v-for="n in (9 - p2Stock - p2OnBoard)" class="w-8 h-8 rounded-full bg-cyan-950/30 border border-cyan-900/50 flex items-center justify-center">
-                    <div class="w-2 h-2 bg-cyan-500/10 rounded-full"></div>
+            <div class="grid grid-cols-2 gap-3 bg-white/5 p-4 rounded-xl border border-white/10">
+                <div v-for="n in (9 - p2Stock - p2OnBoard)" class="w-8 h-8 rounded-full bg-cyan-950/20 border border-cyan-500/10 flex items-center justify-center">
+                    <div class="w-1.5 h-1.5 bg-cyan-500/20 rounded-full"></div>
                 </div>
             </div>
-            <p class="text-[10px] mt-2 uppercase tracking-[0.2em] text-slate-600 font-bold">Captured</p>
+            <p class="text-[9px] mt-3 uppercase tracking-[0.4em] text-neutral-600 font-black">Losses</p>
         </div>
     </div>
 
@@ -157,13 +155,24 @@
                 const winner = ref(null);
 
                 const statusMessage = computed(() => {
-                    if (winner.value) return "VICTORY";
-                    if (phase.value === 'removing') return "MILL FORMED: REMOVE PIECE";
+                    if (winner.value) return "END OF SESSION";
+                    if (phase.value === 'removing') return "MILL: REMOVE TARGET";
                     return phase.value;
                 });
 
                 const isPartOfMill = (id, owner) => {
                     return mills.some(m => m.includes(id) && m.every(idx => board.value[idx] === owner));
+                };
+
+                const canMove = (player) => {
+                    // Flying players can move unless board is full (impossible)
+                    if ((player === 1 ? p1OnBoard.value : p2OnBoard.value) === 3 && phase.value !== 'placing') return true;
+
+                    // Check every piece of the player for at least one adjacent empty slot
+                    return board.value.some((cell, idx) => {
+                        if (cell !== player) return false;
+                        return adjacencies[idx].some(adjIdx => board.value[adjIdx] === null);
+                    });
                 };
 
                 const handleClick = (id) => {
@@ -214,12 +223,20 @@
                     else phase.value = 'placing';
 
                     turn.value = turn.value === 1 ? 2 : 1;
-                    checkGameOver();
+                    checkWinConditions();
                 };
 
-                const checkGameOver = () => {
+                const checkWinConditions = () => {
+                    // 1. Piece Count Condition
                     if (p1Stock.value === 0 && p1OnBoard.value < 3) winner.value = 2;
                     else if (p2Stock.value === 0 && p2OnBoard.value < 3) winner.value = 1;
+
+                    // 2. Trapped Condition (Only applies in Moving phase)
+                    if (!winner.value && phase.value === 'moving') {
+                        if (!canMove(turn.value)) {
+                            winner.value = turn.value === 1 ? 2 : 1;
+                        }
+                    }
                 };
 
                 const resetGame = () => {
