--- a/chess/index.html
+++ b/chess/index.html
@@ -1,157 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess</title>
-    <script src="../lib/vue.js"></script>
-    <script src="../lib/tailwind.js"></script>
-    <script src="../lib/chess.js"></script>
-    <style>
-        [v-cloak] { display: none; }
-
-        /* THE BIG BOARD SETTINGS */
-        .board-container {
-            position: relative;
-            padding: 40px; /* Space for the bigger coordinates */
-            background: #1e293b;
-            border-radius: 12px;
-            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-        }
-
-        .board-grid {
-            display: grid;
-            grid-template-columns: repeat(8, 1fr);
-            grid-template-rows: repeat(8, 1fr);
-            aspect-ratio: 1 / 1;
-            /* Scaled to 85% of screen height or 100% of container */
-            width: 85vh;
-            max-width: 1000px;
-            min-width: 320px;
-            border: 4px solid #334155;
-        }
-
-        .chess-board-wrapper { transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1); transform-style: preserve-3d; }
-        .flipped { transform: rotate(180deg); }
-        .piece-img { transition: transform 0.8s; width: 90%; height: 90%; user-select: none; z-index: 10; }
-        .flipped .piece-img { transform: rotate(180deg); }
-        .square { display: flex; align-items: center; justify-content: center; position: relative; cursor: pointer; }
-
-        /* Larger Coordinates */
-        .coord { position: absolute; font-size: 14px; font-weight: 900; color: #64748b; text-transform: uppercase; }
-        .coord-rank { left: -25px; width: 20px; text-align: center; }
-        .coord-file { bottom: -30px; width: 100%; text-align: center; }
-
-        .capture-dot {
-            position: absolute;
-            width: 30%;
-            height: 30%;
-            background: rgba(239, 68, 68, 0.8);
-            border-radius: 50%;
-            border: 2px solid white;
-            z-index: 30;
-            pointer-events: none;
-            box-shadow: 0 0 15px rgba(0,0,0,0.5);
-        }
-
-        .explorer-bar { height: 6px; border-radius: 3px; overflow: hidden; display: flex; margin-top: 4px; }
-
-        /* Custom scrollbar for the explorer sidebar */
-        .custom-scrollbar::-webkit-scrollbar { width: 4px; }
-        .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
-        .custom-scrollbar::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
-    </style>
-</head>
-<body class="bg-slate-900 text-white min-h-screen font-sans flex flex-col">
-
-<div id="app" v-cloak class="flex-grow flex items-center justify-center p-6">
-
-    <div v-if="!gameStarted" class="w-full max-w-md bg-slate-800 p-10 rounded-3xl shadow-2xl border border-slate-700 text-center">
-        <h1 class="text-6xl font-black italic tracking-tighter mb-8 text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-red-500">CHESS</h1>
-        <button @click="initGame" class="w-full bg-blue-600 hover:bg-blue-500 p-8 rounded-2xl font-black transition shadow-lg text-2xl uppercase tracking-widest">Start Match</button>
-    </div>
-
-    <div v-else class="flex flex-col xl:flex-row gap-10 items-center xl:items-start w-full justify-center">
-
-        <div class="flex flex-col gap-6 w-full xl:w-72 order-2 xl:order-1">
-
-            <div class="bg-slate-800 p-5 rounded-2xl border border-slate-700 shadow-xl">
-                <div class="flex justify-between items-center mb-4">
-                    <span class="text-xs font-black text-slate-500 uppercase tracking-widest">Graveyard</span>
-                    <div :class="turn === 'w' ? 'bg-white' : 'bg-black'" class="w-4 h-4 rounded shadow border border-slate-600"></div>
-                </div>
-
-                <div class="space-y-4">
-                    <div>
-                        <div class="flex justify-between text-[10px] font-bold mb-1 uppercase text-slate-400">White Advantage: <span class="text-white">{{ scores.w }}</span></div>
-                        <div class="flex flex-wrap gap-1 p-2 bg-slate-950 rounded-lg min-h-[50px] content-start">
-                            <img v-for="(p, i) in capturedByWhite" :src="getPieceURL({type: p, color: 'b'})" class="w-6 h-6">
-                        </div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between text-[10px] font-bold mb-1 uppercase text-slate-400">Black Advantage: <span class="text-white">{{ scores.b }}</span></div>
-                        <div class="flex flex-wrap gap-1 p-2 bg-slate-950 rounded-lg min-h-[50px] content-start">
-                            <img v-for="(p, i) in capturedByBlack" :src="getPieceURL({type: p, color: 'w'})" class="w-6 h-6">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <button @click="gameStarted = false" class="w-full py-4 bg-slate-800 hover:bg-red-900/40 border border-slate-700 rounded-xl font-bold transition text-xs uppercase tracking-widest">Resign Game</button>
-        </div>
-
-        <div class="board-container order-1 xl:order-2">
-            <div :class="['chess-board-wrapper', flipped ? 'flipped' : '']">
-                <div class="board-grid">
-                    <template v-for="(row, rIdx) in boardState">
-                        <div v-for="(square, sIdx) in row" :key="rIdx+'-'+sIdx" @click="handleSquareClick(rIdx, sIdx)"
-                             :class="['square', (rIdx + sIdx) % 2 === 0 ? 'bg-[#ebecd0]' : 'bg-[#779556]', isSelected(rIdx, sIdx) ? 'ring-8 ring-inset ring-cyan-400 z-40' : '']">
-
-                            <div v-if="sIdx === 0" class="coord coord-rank" :class="flipped ? 'flipped' : ''">{{ 8 - rIdx }}</div>
-                            <div v-if="rIdx === 7" class="coord coord-file" :class="flipped ? 'flipped' : ''">{{ String.fromCharCode(97 + sIdx) }}</div>
-
-                            <div v-if="isPotentialCapture(rIdx, sIdx)" class="capture-dot"></div>
-                            <img v-if="square" :src="getPieceURL(square)" class="piece-img">
-                        </div>
-                    </template>
-                </div>
-            </div>
-        </div>
-
-        <div class="w-full xl:w-80 order-3">
-            <div class="bg-slate-800 p-6 rounded-2xl border border-slate-700 shadow-xl flex flex-col h-[600px] xl:h-[85vh]">
-                <h2 class="text-sm font-black text-blue-400 uppercase tracking-widest mb-4">Lichess Explorer</h2>
-
-                <div class="mb-6 p-4 bg-slate-900 rounded-xl border border-slate-700">
-                    <p class="text-[10px] text-slate-500 font-bold uppercase mb-1">Opening</p>
-                    <p class="text-sm font-black text-white leading-tight italic">{{ currentOpening }}</p>
-                </div>
-
-                <div class="flex-grow overflow-y-auto space-y-3 pr-2 custom-scrollbar">
-                    <div v-for="m in explorerMoves" :key="m.san" class="bg-slate-950 p-4 rounded-xl border border-slate-800">
-                        <div class="flex justify-between items-center mb-2">
-                            <span class="text-lg font-black text-blue-400">{{ m.san }}</span>
-                            <span class="text-[10px] text-slate-500 font-mono">{{ (m.white + m.draws + m.black).toLocaleString() }} games</span>
-                        </div>
-                        <div class="explorer-bar">
-                            <div class="bg-white" :style="{ width: (m.white / (m.white + m.draws + m.black) * 100) + '%' }"></div>
-                            <div class="bg-slate-500" :style="{ width: (m.draws / (m.white + m.draws + m.black) * 100) + '%' }"></div>
-                            <div class="bg-black" :style="{ width: (m.black / (m.white + m.draws + m.black) * 100) + '%' }"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<footer class="w-full py-8 border-t border-slate-800 text-center mt-auto bg-slate-900/50">
-    <a href="https://sites.google.com/view/codyferd" target="_blank" class="text-slate-400 hover:text-cyan-400 transition font-bold text-lg uppercase tracking-widest">Luca's Website</a>
-</footer>
-
-<script>
-const { createApp, ref, computed } = Vue;
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Chess</title><script src="../cdn.js"></script><style>[v-cloak]{display:none}.board-container{position:relative;padding:40px;background:#1e293b;border-radius:12px;box-shadow:0 25px 50px -12px rgba(0,0,0,.5)}.board-grid{display:grid;grid-template-columns:repeat(8,1fr);grid-template-rows:repeat(8,1fr);aspect-ratio:1/1;width:85vh;max-width:1000px;min-width:320px;border:4px solid #334155}.chess-board-wrapper{transition:transform .8s cubic-bezier(.4,0,.2,1);transform-style:preserve-3d}.flipped{transform:rotate(180deg)}.piece-img{transition:transform .8s;width:90%;height:90%;user-select:none;z-index:10}.flipped .piece-img{transform:rotate(180deg)}.square{display:flex;align-items:center;justify-content:center;position:relative;cursor:pointer}.coord{position:absolute;font-size:14px;font-weight:900;color:#64748b;text-transform:uppercase}.coord-rank{left:-25px;width:20px;text-align:center}.coord-file{bottom:-30px;width:100%;text-align:center}.capture-dot{position:absolute;width:30%;height:30%;background:rgba(239,68,68,.8);border-radius:50%;border:2px solid #fff;z-index:30;pointer-events:none;box-shadow:0 0 15px rgba(0,0,0,.5)}.explorer-bar{height:6px;border-radius:3px;overflow:hidden;display:flex;margin-top:4px}.custom-scrollbar::-webkit-scrollbar{width:4px}.custom-scrollbar::-webkit-scrollbar-track{background:0 0}.custom-scrollbar::-webkit-scrollbar-thumb{background:#334155;border-radius:10px}</style></head><body class="bg-slate-900 text-white min-h-screen font-sans flex flex-col"><div id="app" v-cloak class="flex-grow flex items-center justify-center p-6"><div v-if="!gameStarted" class="w-full max-w-md bg-slate-800 p-10 rounded-3xl shadow-2xl border border-slate-700 text-center"><h1 class="text-6xl font-black italic tracking-tighter mb-8 text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-red-500">CHESS</h1><button @click="initGame" class="w-full bg-blue-600 hover:bg-blue-500 p-8 rounded-2xl font-black transition shadow-lg text-2xl uppercase tracking-widest">Start Match</button></div><div v-else class="flex flex-col xl:flex-row gap-10 items-center xl:items-start w-full justify-center"><div class="flex flex-col gap-6 w-full xl:w-72 order-2 xl:order-1"><div class="bg-slate-800 p-5 rounded-2xl border border-slate-700 shadow-xl"><div class="flex justify-between items-center mb-4"><span class="text-xs font-black text-slate-500 uppercase tracking-widest">Graveyard</span><div :class="turn === 'w' ? 'bg-white' : 'bg-black'" class="w-4 h-4 rounded shadow border border-slate-600"></div></div><div class="space-y-4"><div><div class="flex justify-between text-[10px] font-bold mb-1 uppercase text-slate-400">White Advantage:<span class="text-white">{{ scores.w }}</span></div><div class="flex flex-wrap gap-1 p-2 bg-slate-950 rounded-lg min-h-[50px] content-start"><img v-for="(p, i) in capturedByWhite" :src="getPieceURL({type: p, color: 'b'})" class="w-6 h-6"></div></div><div><div class="flex justify-between text-[10px] font-bold mb-1 uppercase text-slate-400">Black Advantage:<span class="text-white">{{ scores.b }}</span></div><div class="flex flex-wrap gap-1 p-2 bg-slate-950 rounded-lg min-h-[50px] content-start"><img v-for="(p, i) in capturedByBlack" :src="getPieceURL({type: p, color: 'w'})" class="w-6 h-6"></div></div></div></div><button @click="gameStarted = false" class="w-full py-4 bg-slate-800 hover:bg-red-900/40 border border-slate-700 rounded-xl font-bold transition text-xs uppercase tracking-widest">Resign Game</button></div><div class="board-container order-1 xl:order-2"><div :class="['chess-board-wrapper', flipped ? 'flipped' : '']"><div class="board-grid"><template v-for="(row, rIdx) in boardState"><div v-for="(square, sIdx) in row" :key="rIdx+'-'+sIdx" @click="handleSquareClick(rIdx, sIdx)" :class="['square', (rIdx + sIdx) % 2 === 0 ? 'bg-[#ebecd0]' : 'bg-[#779556]', isSelected(rIdx, sIdx) ? 'ring-8 ring-inset ring-cyan-400 z-40' : '']"><div v-if="sIdx === 0" class="coord coord-rank" :class="flipped ? 'flipped' : ''">{{ 8 - rIdx }}</div><div v-if="rIdx === 7" class="coord coord-file" :class="flipped ? 'flipped' : ''">{{ String.fromCharCode(97 + sIdx) }}</div><div v-if="isPotentialCapture(rIdx, sIdx)" class="capture-dot"></div><img v-if="square" :src="getPieceURL(square)" class="piece-img"></div></template></div></div></div><div class="w-full xl:w-80 order-3"><div class="bg-slate-800 p-6 rounded-2xl border border-slate-700 shadow-xl flex flex-col h-[600px] xl:h-[85vh]"><h2 class="text-sm font-black text-blue-400 uppercase tracking-widest mb-4">Lichess Explorer</h2><div class="mb-6 p-4 bg-slate-900 rounded-xl border border-slate-700"><p class="text-[10px] text-slate-500 font-bold uppercase mb-1">Opening</p><p class="text-sm font-black text-white leading-tight italic">{{ currentOpening }}</p></div><div class="flex-grow overflow-y-auto space-y-3 pr-2 custom-scrollbar"><div v-for="m in explorerMoves" :key="m.san" class="bg-slate-950 p-4 rounded-xl border border-slate-800"><div class="flex justify-between items-center mb-2"><span class="text-lg font-black text-blue-400">{{ m.san }}</span><span class="text-[10px] text-slate-500 font-mono">{{ (m.white + m.draws + m.black).toLocaleString() }} games</span></div><div class="explorer-bar"><div class="bg-white" :style="{ width: (m.white / (m.white + m.draws + m.black) * 100) + '%' }"></div><div class="bg-slate-500" :style="{ width: (m.draws / (m.white + m.draws + m.black) * 100) + '%' }"></div><div class="bg-black" :style="{ width: (m.black / (m.white + m.draws + m.black) * 100) + '%' }"></div></div></div></div></div></div></div></div><footer class="w-full py-8 border-t border-slate-800 text-center mt-auto bg-slate-900/50"><a href="https://sites.google.com/view/codyferd" target="_blank" class="text-slate-400 hover:text-cyan-400 transition font-bold text-lg uppercase tracking-widest">Luca's Website</a></footer><script>const { createApp, ref, computed } = Vue;
 
 createApp({
     setup() {
@@ -258,8 +105,4 @@ createApp({
 
         return { gameStarted, boardState, getPieceURL, handleSquareClick, isSelected, isPotentialCapture, flipped, turn, capturedByWhite, capturedByBlack, currentOpening, explorerMoves, scores, initGame };
     }
-}).mount('#app');
-</script>
-</body>
-</html>
-
+}).mount('#app');</script></body></html>
