--- a/superbirdjumper3/index.html
+++ b/superbirdjumper3/index.html
@@ -1,128 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Superbirdjumper3</title>
-    <script src="../lib/vue.js"></script>
-    <script src="../lib/phaser.js"></script>
-    <script src="../lib/tailwind.js"></script>
-    <style>
-        body { margin: 0; background: #000; overflow: hidden; touch-action: none; }
-        .menu-card { background: rgba(0,0,0,0.9); backdrop-filter: blur(20px); border: 1px solid rgba(255,255,255,0.15); }
-        input[type="range"] { -webkit-appearance: none; background: #333; height: 4px; border-radius: 2px; }
-        input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; width: 14px; height: 14px; background: #fff; border-radius: 50%; }
-        input[type="color"]::-webkit-color-swatch-wrapper { padding: 0; }
-        input[type="color"]::-webkit-color-swatch { border: none; border-radius: 4px; }
-    </style>
-</head>
-<body>
-<div id="app" class="relative w-screen h-screen" :style="{ backgroundColor: settings.colors.bg }">
-    <div id="ui" class="absolute inset-0 z-10 pointer-events-none text-white p-6 flex flex-col justify-between select-none">
-        <div class="absolute bottom-4 left-6 opacity-30 text-[10px] font-bold uppercase tracking-widest">Version 1.1</div>
-
-        <div v-if="gameState !== 'playing'" class="pointer-events-auto absolute inset-0 flex flex-col items-center justify-center bg-black/60 backdrop-blur-sm">
-            <div class="menu-card flex flex-col items-center w-full max-w-xs gap-4 p-6 rounded-[2rem] shadow-2xl mx-4">
-                <h1 class="text-3xl font-black italic uppercase tracking-tighter">Superbirdjumper3</h1>
-                <div v-if="gameState !== 'start'" class="text-center bg-white/5 w-full py-2 rounded-xl border border-white/10">
-                    <p class="text-2xl font-black italic leading-none">Score: {{ score }}</p>
-                </div>
-                <button @click="handlePrimary" class="w-full bg-white text-black py-3 rounded-lg font-black uppercase active:scale-95 transition-all">
-                    {{ gameState === 'paused' ? 'Resume' : 'Play' }}
-                </button>
-                <div class="grid grid-cols-2 gap-2 w-full">
-                    <button v-for="m in ['tuning','style']" @click="view = view===m?'':m" :class="view===m?'bg-white text-black':'bg-white/10'" class="p-2 rounded-lg text-[10px] font-bold uppercase">{{m}}</button>
-                </div>
-
-                <div v-if="view === 'tuning'" class="w-full flex flex-col gap-3 p-3 bg-white/5 rounded-xl border border-white/5">
-                    <div class="grid grid-cols-4 gap-1 mb-1">
-                        <button v-for="(p, n) in presets" @click="applyDiff(n)" class="bg-white/10 p-1 rounded text-[7px] font-bold uppercase truncate">{{n}}</button>
-                    </div>
-                    <div v-for="f in fields" :key="f.k" class="flex flex-col">
-                        <div class="flex justify-between text-[9px] opacity-50 uppercase mb-1"><span>{{f.n}}</span><span>{{settings[f.k]}}</span></div>
-                        <input type="range" v-model.number="settings[f.k]" :min="f.min" :max="f.max">
-                    </div>
-                </div>
-
-                <div v-if="view === 'style'" class="w-full flex flex-col gap-3 p-3 bg-white/5 rounded-xl border border-white/5">
-                    <div class="grid grid-cols-4 gap-1 mb-2">
-                        <button v-for="t in themes" @click="applyStyle(t)" class="bg-white/10 p-1 rounded text-[8px] font-bold uppercase">{{t}}</button>
-                    </div>
-                    <div class="grid grid-cols-2 gap-2">
-                        <div v-for="(c, p) in settings.colors" :key="p" class="flex items-center gap-2 bg-black/40 p-1 rounded border border-white/10">
-                            <input type="color" v-model="settings.colors[p]" @input="refresh" class="w-6 h-6 bg-transparent cursor-pointer">
-                            <span class="text-[7px] font-bold uppercase opacity-50">{{p}}</span>
-                        </div>
-                    </div>
-                </div>
-
-                <button @click="resetConfig" class="text-[8px] opacity-20 uppercase font-bold hover:opacity-100">Reset All</button>
-            </div>
-
-            <div class="mt-6 text-center">
-                <p class="text-white font-black italic uppercase text-xl leading-none">Luca's Website</p>
-                <a href="https://sites.google.com/view/codyferd" target="_blank" class="text-white/40 text-[10px] font-bold hover:text-white uppercase tracking-widest">sites.google.com/view/codyferd</a>
-            </div>
-        </div>
-
-        <div v-if="gameState === 'playing'" class="flex justify-between items-start pointer-events-none">
-            <div>
-                <div class="text-4xl font-black italic tracking-tighter">SCORE: {{ score }}</div>
-                <div class="text-yellow-400 text-[10px] font-bold uppercase tracking-widest mt-1">BEST: {{ high }}</div>
-            </div>
-            <button @click="togglePause" class="pointer-events-auto bg-white/10 p-3 rounded-xl backdrop-blur-md active:scale-90">
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>
-            </button>
-        </div>
-        <div v-if="gameState === 'playing'" class="pointer-events-auto flex flex-col gap-3 mb-2 ml-2">
-            <button v-for="dir in ['u','d']" @touchstart.prevent="btn[dir]=true" @touchend.prevent="btn[dir]=false" @mousedown="btn[dir]=true" @mouseup="btn[dir]=false" class="w-16 h-16 rounded-2xl bg-white/10 border border-white/20 flex items-center justify-center active:bg-white/30 backdrop-blur-md">
-                <svg v-if="dir==='u'" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="4"><path d="M5 15l7-7 7 7"/></svg>
-                <svg v-else class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="4"><path d="M19 9l-7 7-7-7"/></svg>
-            </button>
-        </div>
-    </div>
-    <div id="game-container" class="absolute inset-0 z-0"></div>
-</div>
-
-<script type="module">
-    import { DEFAULTS, THEMES, PRESETS } from './constants.js';
-    import { MainGame } from './game.js';
-    const { createApp } = Vue;
-
-    window.gameApp = createApp({
-        data() { return {
-            gameState: 'start', score: 0, high: localStorage.getItem('sbj3_hi')||0, view: '', btn: {u:false, d:false},
-            settings: JSON.parse(localStorage.getItem('sbj3_cfg')) || JSON.parse(JSON.stringify(DEFAULTS)),
-            fields: [{n:'Gap',k:'gapSize',min:100,max:400},{n:'Aggro',k:'enemyIntensity',min:0,max:100},{n:'Drift',k:'extremity',min:0,max:100},{n:'Speed+',k:'speedStep',min:0,max:100}],
-            themes: ['classic','neon','dark','synth'], presets: PRESETS
-        }},
-        watch: {
-            score(n) { if(n > this.high) { this.high = n; localStorage.setItem('sbj3_hi', n); } },
-            settings: { handler() { localStorage.setItem('sbj3_cfg', JSON.stringify(this.settings)) }, deep: true }
-        },
-        methods: {
-            refresh() {
-                const s = this.game.scene.getScene('MainGame'); if(!s) return;
-                s.cameras.main.setBackgroundColor(this.settings.colors.bg);
-                ['bird','pipe','enemy'].forEach(k => { if(s.textures.exists(k)) s.textures.remove(k); });
-                s.gen(); s.bird.setTexture('bird'); s.pts.texture = s.textures.get('bird');
-                s.pipes.getChildren().forEach(p => p.setTexture('pipe')); s.enemies.getChildren().forEach(e => e.setTexture('enemy'));
-            },
-            applyStyle(t) { this.settings.colors = {...THEMES[t]}; this.refresh(); },
-            applyDiff(n) { this.settings = {...this.settings, ...JSON.parse(JSON.stringify(PRESETS[n]))}; },
-            handlePrimary() {
-                if (this.gameState==='paused') { this.gameState='playing'; this.game.scene.resume('MainGame'); }
-                else { this.score=0; this.gameState='playing'; this.game.scene.getScene('MainGame').scene.restart(); }
-            },
-            togglePause() { this.gameState==='playing' ? (this.gameState='paused', this.game.scene.pause('MainGame')) : this.handlePrimary(); },
-            resetConfig() { localStorage.removeItem('sbj3_cfg'); location.reload(); }
-        },
-        mounted() {
-            this.game = new Phaser.Game({ type:Phaser.AUTO, parent:'game-container', width:window.innerWidth, height:window.innerHeight, scale:{mode:Phaser.Scale.RESIZE}, physics:{default:'arcade'}, scene:MainGame });
-            window.addEventListener('pointerup', () => this.btn.u = this.btn.d = false);
-        }
-    }).mount('#app');
-</script>
-</body>
-</html>
-
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><title>Superbirdjumper3</title><script src="../cdn.js"></script><script src="./constants.js"></script><script src="./game.js"></script><script src="./app.js" type="module"></script><style>body{margin:0;background:#000;overflow:hidden;touch-action:none}.menu-card{background:rgba(0,0,0,.9);backdrop-filter:blur(20px);border:1px solid rgba(255,255,255,.15)}input[type=range]{-webkit-appearance:none;background:#333;height:4px;border-radius:2px}input[type=range]::-webkit-slider-thumb{-webkit-appearance:none;width:14px;height:14px;background:#fff;border-radius:50%}input[type=color]::-webkit-color-swatch-wrapper{padding:0}input[type=color]::-webkit-color-swatch{border:none;border-radius:4px}</style></head><body><div id="app" class="relative w-screen h-screen" :style="{ backgroundColor: settings.colors.bg }"><div id="ui" class="absolute inset-0 z-10 pointer-events-none text-white p-6 flex flex-col justify-between select-none"><div class="absolute bottom-4 left-6 opacity-30 text-[10px] font-bold uppercase tracking-widest">Version 1.1</div><div v-if="gameState !== 'playing'" class="pointer-events-auto absolute inset-0 flex flex-col items-center justify-center bg-black/60 backdrop-blur-sm"><div class="menu-card flex flex-col items-center w-full max-w-xs gap-4 p-6 rounded-[2rem] shadow-2xl mx-4"><h1 class="text-3xl font-black italic uppercase tracking-tighter">Superbirdjumper3</h1><div v-if="gameState !== 'start'" class="text-center bg-white/5 w-full py-2 rounded-xl border border-white/10"><p class="text-2xl font-black italic leading-none">Score: {{ score }}</p></div><button @click="handlePrimary" class="w-full bg-white text-black py-3 rounded-lg font-black uppercase active:scale-95 transition-all">{{ gameState === 'paused' ? 'Resume' : 'Play' }}</button><div class="grid grid-cols-2 gap-2 w-full"><button v-for="m in ['tuning','style']" @click="view = view===m?'':m" :class="view===m?'bg-white text-black':'bg-white/10'" class="p-2 rounded-lg text-[10px] font-bold uppercase">{{m}}</button></div><div v-if="view === 'tuning'" class="w-full flex flex-col gap-3 p-3 bg-white/5 rounded-xl border border-white/5"><div class="grid grid-cols-4 gap-1 mb-1"><button v-for="(p, n) in presets" @click="applyDiff(n)" class="bg-white/10 p-1 rounded text-[7px] font-bold uppercase truncate">{{n}}</button></div><div v-for="f in fields" :key="f.k" class="flex flex-col"><div class="flex justify-between text-[9px] opacity-50 uppercase mb-1"><span>{{f.n}}</span><span>{{settings[f.k]}}</span></div><input type="range" v-model.number="settings[f.k]" :min="f.min" :max="f.max"></div></div><div v-if="view === 'style'" class="w-full flex flex-col gap-3 p-3 bg-white/5 rounded-xl border border-white/5"><div class="grid grid-cols-4 gap-1 mb-2"><button v-for="t in themes" @click="applyStyle(t)" class="bg-white/10 p-1 rounded text-[8px] font-bold uppercase">{{t}}</button></div><div class="grid grid-cols-2 gap-2"><div v-for="(c, p) in settings.colors" :key="p" class="flex items-center gap-2 bg-black/40 p-1 rounded border border-white/10"><input type="color" v-model="settings.colors[p]" @input="refresh" class="w-6 h-6 bg-transparent cursor-pointer"><span class="text-[7px] font-bold uppercase opacity-50">{{p}}</span></div></div></div><button @click="resetConfig" class="text-[8px] opacity-20 uppercase font-bold hover:opacity-100">Reset All</button></div><div class="mt-6 text-center"><p class="text-white font-black italic uppercase text-xl leading-none">Luca's Website</p><a href="https://sites.google.com/view/codyferd" target="_blank" class="text-white/40 text-[10px] font-bold hover:text-white uppercase tracking-widest">sites.google.com/view/codyferd</a></div></div><div v-if="gameState === 'playing'" class="flex justify-between items-start pointer-events-none"><div><div class="text-4xl font-black italic tracking-tighter">SCORE: {{ score }}</div><div class="text-yellow-400 text-[10px] font-bold uppercase tracking-widest mt-1">BEST: {{ high }}</div></div><button @click="togglePause" class="pointer-events-auto bg-white/10 p-3 rounded-xl backdrop-blur-md active:scale-90"><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg></button></div><div v-if="gameState === 'playing'" class="pointer-events-auto flex flex-col gap-3 mb-2 ml-2"><button v-for="dir in ['u','d']" @touchstart.prevent="btn[dir]=true" @touchend.prevent="btn[dir]=false" @mousedown="btn[dir]=true" @mouseup="btn[dir]=false" class="w-16 h-16 rounded-2xl bg-white/10 border border-white/20 flex items-center justify-center active:bg-white/30 backdrop-blur-md"><svg v-if="dir==='u'" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="4"><path d="M5 15l7-7 7 7"/></svg><svg v-else class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="4"><path d="M19 9l-7 7-7-7"/></svg></button></div></div><div id="game-container" class="absolute inset-0 z-0"></div></div></body></html>
