--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                     };
 
                     const games = [
-                        { name: "Calculator", path: "/www/calculator", color: "blue" },
-                        { name: "Chess", path: "/www/chess", color: "purple" },
-                        { name: "Superbirdjumper3", path: "/www/superbirdjumper3", color: "blue" },
+                        { name: "Calculator", path: "calculator", color: "blue" },
+                        { name: "Chess", path: "chess", color: "purple" },
+                        { name: "Superbirdjumper3", path: "superbirdjumper3", color: "blue" },
                     ];
 
                     const socialLinks = [
