--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body style="margin:0;">
-    <iframe src="browser/index.html" style="width:100vw; height:100vh; border:none;"></iframe>
+    <iframe src="main/index.html" style="width:100vw; height:100vh; border:none;"></iframe>
 </body>
 </html>
