--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <title>Calculator</title>
+        <title>Avero Calculator</title>
         <script src="../cdn.js"></script>
         <style type="text/tailwindcss">
             @layer components {
@@ -165,15 +165,6 @@
                 </div>
             </div>
         </div>
-        <footer class="mt-8 mb-4 text-center border-t border-slate-900 pt-6">
-            <div class="text-slate-500 font-mono text-sm tracking-widest uppercase mb-1">Luca's Website</div>
-            <a
-                href="https://sites.google.com/view/codyferd"
-                target="_blank"
-                class="text-emerald-600 font-mono text-xs hover:text-emerald-400 transition-colors"
-                >sites.google.com/view/codyferd</a
-            >
-        </footer>
         <script>
             const { createApp, ref, onMounted } = Vue;
 
