--- a/desktop/index.html
+++ b/desktop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avero</title>
+    <title>Avero Desktop</title>
     <script src="../cdn.js"></script>
     <style>
         [v-cloak] { display: none; }
