--- a/files/index.html
+++ b/files/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Files</title>
+    <title>Avero Files</title>
     <script src="../cdn.js"></script>
     <style>
         [v-cloak] { display: none; }
